[package]
name = "fileserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4"
dotenv = "0.15.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
sanitize-filename = "0.4.0"
